Blank project was created once again.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=7340128799475458A3FE9096586B9805
+ProjectID=945A629F494A84FA0211CC8A5A513B2D
+
+[StartupActions]
+bAddPacks=True
+InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
