--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Levels/TestMap.TestMap
+EditorStartupMap=/Game/Levels/TestMap.TestMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -59,7 +60,7 @@ bAuthorizeAutomaticWidgetVariableCreation=False
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=B5E58A96F54F03C0E0E9BF86732F8BFD
+SecurityToken=9CEE46E94028E6631F9B6BB2E3C11F29
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
